# python-project-52

./: .env  .env.example  .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  sonar-project.properties
.github/workflows/: hexlet-check.yml  my_workflow.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task_manager/: admin.py  apps.py  asgi.py  filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_models.py  test_views.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label_task_labels.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_models.py  test_views.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/tests/: test_models.py  test_views.py
task_manager/tests/: base.py  base_view_test.py
task_manager/users/: apps.py  forms.py  urls.py  views.py
task_manager/users/tests/: test_models.py  test_views.py
templates/: base.html  home.html  label_create.html  label_update.html  login.html  register.html  status_create.html  status_delete.html  status_update.html  task_create.html  task_detail.html  task_update.html  tasks.html  user_delete.html  user_update.html  users.html
(+10 files in other folders)
