[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "1.0.0"
description = "Task Manager application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.4",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "dj-database-url>=2.2.0",
    "whitenoise>=6.7.0",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "rollbar>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["task_manager*", "task_manager.*"]
exclude = ["templates*", "tests*", "migrations*"]

[tool.flake8]
max-line-length = 100
exclude = [
    "migrations",
    ".venv",
    "__pycache__",
    "staticfiles",
    "task_manager/settings.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = "tests.py"
addopts = "--reuse-db"
[tool.ruff]
line-length = 100
exclude = [
    "migrations",
    ".venv",
    "__pycache__",
    "staticfiles",
    "task_manager/settings.py",
]
